style: wrap html and body styles in media query to avoid printing issues

--- a/src/bravedave/dvc/esse/esse.css
+++ b/src/bravedave/dvc/esse/esse.css
@@ -5,10 +5,13 @@
 
   MIT License
   */
-html,
-body {
-  height: 100%;
-  margin: 0;
+@media screen {
+
+  html,
+  body {
+    height: 100%;
+    margin: 0;
+  }
 }
 
 .esse25-layout-wrapper {
@@ -24,7 +27,8 @@ body {
 
   aside {
     flex-shrink: 0;
-    width: 250px; /* Sidebar width */
+    width: 250px;
+    /* Sidebar width */
     overflow-y: auto;
     padding: .5rem;
   }
@@ -35,8 +39,6 @@ body {
     padding: 1rem;
   }
 }
-
-
 
 .modal {
   --bs-modal-header-padding: .8rem 1rem;
